<resources>
    <string name="app_name">APA_Projet</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginhere">Log in here</string>
    <string name="register">Register</string>
    <string name="registerhere">Register here</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="createActivity">Create an activity</string>
    <string name="activityTitle">Title</string>
    <string name="activityDuration">Duration (min)</string>
    <string name="activityDescription" translatable="false">Description</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="search">Search</string>
    <string name="addStructure">Add a Structure</string>
    <string name="addSession">Add a Session</string>
    <string name="addActivity">Add an Activity</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="collaborator">Collaborator</string>
    <string name="structureName">Structure name</string>
    <string name="structureDiscipline">Structure Disciplines</string>
    <string name="structurePathologies">List of Pathologies</string>
    <string name="add">Add</string>
    <string name="session_of">Session of</string>
    <string name="activity">Activity</string>
    <string name="suggestCourses">Suggest activities to a patient</string>
    <string name="suggest">Suggest</string>
    <string name="selectPatient">Select a patient</string>
    <string name="hours">Hours</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_duration_in_hours">Activity Duration</string>
    <string name="years">Years</string>
    <string name="patientName">Patient Name</string>
    <string name="patientAge">Patient Age</string>
    <string name="name">Name</string>
    <string name="courseTitle">Course title</string>
    <string name="courseDescription">Course description</string>
    <string name="courseCategorie">Course Categorie</string>
    <string name="selectActivities">Select Activities</string>
    <string name="title">Title</string>

    <!--
        <string-array name="duration_array">
            <item>30 mins</item>
            <item>1 hr </item>
            <item>1 hr 30 mins</item>
            <item>2 hrs</item>
            <item>2 hrs 30 mins</item>
            <item>3 hrs</item>
        </string-array>-->
</resources>