<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentRegister">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/register"

        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_number"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"/>



    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextAge">



        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/radioRole"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radioGender">

        <RadioButton
            android:id="@+id/radioButtonPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient" />

        <RadioButton
            android:id="@+id/radioButtonDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doctor" />
        <RadioButton
            android:id="@+id/radioButtonCollaborator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collaborator" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/radioRole"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</RelativeLayout>
