<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/register"

        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/editTextActivityTitle"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextActivityDuration"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextActivityTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextActivityDuration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:drawableRight="@drawable/ic_number"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"/>



    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextAge">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/radioGender"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/buttonLogin"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/registerhere"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>