<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/suggestCourses"

        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />



    <EditText
        android:id="@+id/editTextCourseTitle"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/courseTitle"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextCourseDescription"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextCourseTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/courseDescription"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextCourseCategorie"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextCourseDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/courseCategorie"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/selectActivityButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/editTextCourseCategorie"
        android:layout_centerHorizontal="true"
        android:text="@string/selectActivities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/selectActivityButton">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewActivities"
            android:layout_width="200dp"
            android:layout_height="65dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_max="200dp"
            tools:itemCount="2"
            tools:listitem="@layout/recyclerview_activity" />
    </RelativeLayout>

    <Button
        android:id="@+id/selectPatientButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relativeLayout"
        android:text="@string/selectPatient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/suggestCourseButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/selectPatientButton"
        android:layout_centerHorizontal="true"
        android:text="@string/suggest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>