<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/createActivity"

        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/editTextActivityTitle"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/activityTitle"
        android:inputType="text" />
    <EditText
        android:id="@+id/editTextActivityDescription"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextActivityTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/activityDescription"
        android:inputType="text" />

    <Spinner
        android:id="@+id/editTextActivityDuration"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextActivityDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#11000000" />

    <Button
        android:id="@+id/buttonCreate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/editTextActivityDuration"
        android:layout_centerHorizontal="true"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>





</RelativeLayout>